src/test/resources/failing/fail20.pnd
template Foo<A> {
    P(x) : int
    @type Animal
}
Foo<_> as F1

F1.P(x) <- Q(x)